# F1-Race-Insight

./: .gitignore  .pre-commit-config.yaml  01_inspect.ipynb  Dockerfile  LICENSE  Makefile  README.md  etl_download.py  pyproject.toml  requirements.txt  run_dashboard.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  etl_retrain.yml
docs/: architecture.md  openapi.yaml
scripts/: README.md  generate_architecture_diagram.py  generate_build_badge.py  generate_sample_data.py  generate_sample_model.py
src/: __init__.py  config.py
src/api/: __init__.py  app.py
src/dashboard/: Main.py  __init__.py
src/etl/: __init__.py  downloader.py  transformer.py
src/features/: __init__.py  build_features.py  target.py
src/models/: __init__.py  evaluate.py  predict.py  train.py
src/utils/: __init__.py  io.py  logging.py
tests/: conftest.py  test_api.py  test_etl.py  test_features.py  test_model.py
