[tool.poetry]
name = "f1-race-insight"
version = "1.0.0"
description = "F1 Race Insight Predictor for safety car deployment"
authors = ["F1 Race Insight Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastf1 = "3.2.1"
pandas = "2.1.3"
numpy = "1.26.2"
scikit-learn = "1.3.2"
xgboost = "2.0.2"
matplotlib = "3.8.2"
seaborn = "0.13.0"
plotly = "5.18.0"
streamlit = "1.30.0"
flask = "3.0.0"
gunicorn = "21.2.0"
structlog = "24.1.0"
coloredlogs = "15.0.1"
python-dotenv = "1.0.0"
shap = "0.44.0"
joblib = "1.3.2"
pyarrow = "14.0.1"
dash = "2.14.2"
dash-bootstrap-components = "1.5.0"
dash-daq = "0.5.0"
ipykernel = "6.29.0"
flask-cors = "4.0.0"
flask-limiter = "3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-cov = "4.1.0"
pytest-asyncio = "0.21.1"
black = "24.1.0"
isort = "5.12.0"
flake8 = "6.1.0"
mypy = "1.7.1"
pre-commit = "3.5.0"
httpx = "0.25.2"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=src --cov-report=xml --cov-report=term-missing --cov-fail-under=90"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 